--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -4,13 +4,10 @@
 <title> Autistic Mindset</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="C:\Users\lole\Desktop\G.PROJECT2\IMages\HOME icon.png" type="image/x-icon">
+<link rel="icon" href="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\HOME icon.png"type="image/x-icon">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-
 
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
@@ -34,13 +31,12 @@ body, html {
 </style>
 </head>
 <body>
-
   <!-- Navbar (sit on top) -->
   <div class="w3-top">
 
     <div class="w3-bar w3-white w3-hide-small" style="letter-spacing:4px;">
       <a href="#home" class="w3-hover-Lights w3-bar-item">
-       <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\HOME icon.png" alt="Logo" style="height: 40px;"> <!-- Adjust the height as needed -->
+       <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\HOME icon.png" alt="Logo" style="height: 40px;"> <!-- Adjust the height as needed -->
      </a>
       <!-- Right-sided navbar links -->
       <div class="w3-right w3-hide-small">
@@ -69,9 +65,9 @@ body, html {
 
 <!-- Header with full-height image -->
 <div>
-<header class=" w3-wide" style="max-width:1600px;min-width:500px" id="home">
+<header class="w3-wide" style="max-width:1600px;min-width:500px" id="home">
 
-  <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\HOME PAGE.jpg"alt="home" width="1600" height="800">
+  <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\HOME PAGE.jpg"alt="home" width="1600" height="800">
       <div class="w3-cursive w3-display-left w3-text-white" style="padding:48px">
         <span class="w3-jumbo w3-hide-small"id="siteTitle">Autistic Mindset</span><br>
         <span class="w3-large"id="SiteTheem">Autism Is Not A Disability.</span>
@@ -90,7 +86,7 @@ body, html {
   <h3 class="w3-center"id="aboutus">ABOUT US</h3>
   <p class="w3-center w3-large" id="keyfeatures">Key features</p>
   <div class="w3-row-padding w3-center w3-middle" style="margin-top:64px">
-    <div class="w3-quarter">
+    <div class="w3-quarter w3-center w3-margin">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
       <p class="w3-text-light-blue w3-large"id="Passion">Passion</p>
       <p>The desire to provide all possible assistance to all mothers who face difficulty in raising a child on the ASD. .</p>
@@ -111,7 +107,7 @@ body, html {
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\lama.jpg" alt="LAMA" style="width:100%">
+        <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\lama.jpg" alt="LAMA" style="width:100%">
         <div class="w3-container">
           <h3>Lama Rashed</h3>
           <p class="w3-opacity">Team Leader & Web Designer & programmer</p>
@@ -122,7 +118,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\Nada.jpg" alt="NADA" style="width:100%">
+        <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\Nada.jpg" alt="NADA" style="width:100%">
         <div class="w3-container">
           <h3>Nada Mohammed</h3>
           <p class="w3-opacity">web devloper & programmer</p>
@@ -133,7 +129,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\shahad.jpg" alt="SHAHAD" style="width:100%">
+        <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\shahad.jpg" alt="SHAHAD" style="width:100%">
         <div class="w3-container">
           <h3>Shahad Ahmed</h3>
           <p class="w3-opacity">data analyst</p>
@@ -144,7 +140,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\maryam.jpg" alt="MARYAM" style="width:100%">
+        <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\maryam.jpg" alt="MARYAM" style="width:100%">
         <div class="w3-container">
           <h3>maryam Abduallah</h3>
           <p class="w3-opacity">data analyst</p>
@@ -156,7 +152,7 @@ body, html {
   </div>
   <div class="w3-col l3 m6 w3-middle w3-margin-bottom">
     <div class="w3-card">
-      <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\fatimah M.jpg" alt="FATIMAH M" style="width:100%">
+      <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\fatimah M.jpg" alt="FATIMAH M" style="width:100%">
       <div class="w3-container">
         <h3>Fatimah Mohammed</h3>
         <p class="w3-opacity">QA analysts</p>
@@ -167,7 +163,7 @@ body, html {
   </div>
   <div class="w3-col l3 m6 w3-middle w3-margin-bottom">
     <div class="w3-card">
-      <img src="C:\Users\lole\Desktop\G.PROJECT2\IMages\fatimah H.jpg" alt="FATIMAH H" style="width:100%">
+      <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\fatimah H.jpg" alt="FATIMAH H" style="width:100%">
       <div class="w3-container">
         <h3>Fatimah Hassan</h3>
         <p class="w3-opacity">Documentarian</p>
