--- a/specialist.html
+++ b/specialist.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Specialist Care</title>
+    <title> مراكز التوحد </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="HOME icon.png" alt="image/x-icon">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <style>
+   <style>
         body, h1, h2, h3, h4, h5, h6 {
             font-family: "Raleway", sans-serif;
         }
@@ -96,27 +96,27 @@
             padding: 0px;
         }
     </style>
+   
 </head>
 <body>
-    <!-- Navbar (sit on top) -->
-    <div class="w3-top">
-        <div class="w3-bar w3-white w3-hide-small" style="letter-spacing:4px;">
-            <a href="#home" class="w3-hover-Lights w3-bar-item">
-                <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\HOME icon.png" alt="Logo" style="height: 40px;">
-            </a>
+         <!-- Navbar (sit on top) -->
+  <div class="w3-top">
+    <div class="w3-bar w3-white" style="letter-spacing:4px;">
+      <a href="/" class="w3-hover-Lights w3-bar-item">
+       <img src="HOME icon.png"  alt="Logo" style="height: 40px;">
+     </a>
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
-                <a href="#aboutus" class="w3-hover-pale-yellow w3-bar-item w3-button" id="ABOUT">ABOUT</a>
-                <a href="#team" class="w3-hover-pale-yellow w3-bar-item w3-button" id="TEAM"><i class="fa fa-user"></i> TEAM</a>
+                <a href="#aboutus" class="w3-hover-pale-yellow w3-bar-item w3-button" id="ABOUT">عننا</a>
+                <a href="#team" class="w3-hover-pale-yellow w3-bar-item w3-button" id="TEAM"><i class="fa fa-user"></i>الفريق </a>
                 <div class="w3-hover-pale-yellow w3-middle w3-dropdown-hover w3-hide-small">
-                    <button class="w3-bar-item w3-button" id="OURSERVICES"> OUR SERVICES <i class="fa fa-caret-down"></i></button>
+                    <button class="w3-bar-item w3-button" id="OURSERVICES">خدماتنا <i class="fa fa-caret-down"></i></button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a href="C:\Users\Nada6\OneDrive\سطح المكتب\G.PROJECT2\spicialist.html" target="_blank" class="w3-hover-pale-yellow w3-bar-item w3-button" id="SpecialistCare">specialist care</a>
-                        <a href="C:\Users\Nada6\OneDrive\سطح المكتب\G.PROJECT2\templates\MindBot.html" target="_blank" class="w3-hover-pale-yellow w3-bar-item w3-button" id="MindBOT">MindBot</a>
-                        <a href="C:\Users\Nada6\OneDrive\سطح المكتب\G.PROJECT2\community.html" target="_blank" class="w3-hover-pale-yellow w3-bar-item w3-button" id="community">community</a>
+                        <a href="MindBot.html" target="_blank" class="w3-hover-pale-yellow w3-bar-item w3-button" id="MindBOT">MindBot</a>
+                        <a href="community.html" target="_blank" class="w3-hover-pale-yellow w3-bar-item w3-button" id="community">المجتمع</a>
                     </div>
                 </div>
-                <a href="#contact" class="w3-hover-pale-yellow w3-bar-item w3-button" id="contact"><i class="fa fa-envelope"></i> CONTACT</a>
+                <a href="#contact" class="w3-hover-pale-yellow w3-bar-item w3-button" id="contact"><i class="fa fa-envelope"></i> تواصل معنا</a>
             </div>
             <!-- Hide right-floated links on small screens and replace them with a menu icon -->
             <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -127,7 +127,7 @@
     <div class="w3-main">
         <div class="w3-panel">
             <div class="image-container">
-                <img src="C:\Users\Nada6\OneDrive\سطح المكتب\G2.project\images\Spec.jpg" style="width: 1500px; height: 350px;" alt="Google Regional Map">
+                <img src="Specialist image.jpg" style="width: 1500px; height: 350px;" alt="Google Regional Map">
             </div>
             <div class="locations-container">
                 <div class="w3-card">
